--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-register": "^6.26.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2"
+    "graphql": "^0.13.2",
+    "node-fetch": "^2.1.2"
   }
 }
